--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -16,35 +16,44 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="72" id="FWx-y9-XlZ" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="72"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="top" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="80" id="FWx-y9-XlZ" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FWx-y9-XlZ" id="cla-48-vGJ">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="72"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26z-Da-7wq">
-                                            <rect key="frame" x="34" y="11" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26z-Da-7wq">
+                                            <rect key="frame" x="34" y="11" width="44.5" height="21"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5m0-ov-N7l">
+                                            <rect key="frame" x="34" y="40" width="346" height="21"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00/00/00, 00:00 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ge2-Nq-X0W">
-                                            <rect key="frame" x="254" y="11" width="140" height="18"/>
+                                            <rect key="frame" x="254" y="14" width="140" height="18"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5m0-ov-N7l">
-                                            <rect key="frame" x="34" y="40" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="26z-Da-7wq" firstAttribute="leading" secondItem="cla-48-vGJ" secondAttribute="leadingMargin" constant="14" id="6nv-aS-ajr"/>
+                                        <constraint firstItem="5m0-ov-N7l" firstAttribute="leading" secondItem="cla-48-vGJ" secondAttribute="leadingMargin" constant="14" id="8yy-eK-h9v"/>
+                                        <constraint firstAttribute="trailing" secondItem="ge2-Nq-X0W" secondAttribute="trailing" constant="20" id="X3C-BI-Xpf"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="5m0-ov-N7l" secondAttribute="bottom" constant="8" id="YtB-6E-8BS"/>
+                                        <constraint firstItem="5m0-ov-N7l" firstAttribute="top" secondItem="26z-Da-7wq" secondAttribute="bottom" constant="8" id="bbQ-MU-Lo8"/>
+                                        <constraint firstItem="ge2-Nq-X0W" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="26z-Da-7wq" secondAttribute="trailing" constant="8" symbolic="YES" id="cZT-QI-Eeo"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="5m0-ov-N7l" secondAttribute="trailing" constant="14" id="vMm-TI-fXa"/>
+                                        <constraint firstItem="26z-Da-7wq" firstAttribute="top" secondItem="cla-48-vGJ" secondAttribute="topMargin" id="vrO-ap-d3Z"/>
+                                        <constraint firstItem="5m0-ov-N7l" firstAttribute="top" secondItem="ge2-Nq-X0W" secondAttribute="bottom" constant="8" id="w7o-lP-cI9"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="lblEntryBody" destination="5m0-ov-N7l" id="y3E-Zm-Wdd"/>
@@ -138,6 +147,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="g2F-n3-W0Q"/>
+        <segue reference="utV-yh-SuB"/>
     </inferredMetricsTieBreakers>
 </document>
