--- a/MyJournal/MyJournal/Storyboards/Base.lproj/Main.storyboard
+++ b/MyJournal/MyJournal/Storyboards/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <scene sceneID="tdC-ir-lDN">
             <objects>
                 <tableViewController id="CZO-CO-wkp" customClass="EntriesTableViewController" customModule="MyJournal" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="qgn-bB-fpr">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" id="qgn-bB-fpr">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
