--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -105,25 +105,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EGq-Nm-hp0">
-                                <rect key="frame" x="20" y="108" width="374" height="34"/>
+                                <rect key="frame" x="20" y="159" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Dtu-Li-DiX">
-                                <rect key="frame" x="20" y="162" width="374" height="680"/>
+                                <rect key="frame" x="20" y="213" width="374" height="629"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="gcE-6f-hWG">
+                                <rect key="frame" x="20" y="108" width="374" height="32"/>
+                                <segments>
+                                    <segment title="😭"/>
+                                    <segment title="😐"/>
+                                    <segment title="😎"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Dtu-Li-DiX" secondAttribute="trailing" constant="20" id="0DU-C9-0L6"/>
-                            <constraint firstItem="EGq-Nm-hp0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="2Ij-fu-hlG"/>
+                            <constraint firstItem="gcE-6f-hWG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="1Oe-RK-Q8G"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gcE-6f-hWG" secondAttribute="trailing" constant="20" id="1On-Bd-vwI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EGq-Nm-hp0" secondAttribute="trailing" constant="20" id="4HM-j7-BTb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Dtu-Li-DiX" secondAttribute="bottom" constant="20" id="9YN-Fw-HBL"/>
                             <constraint firstItem="Dtu-Li-DiX" firstAttribute="top" secondItem="EGq-Nm-hp0" secondAttribute="bottom" constant="20" id="Axf-Vr-Y9i"/>
+                            <constraint firstItem="gcE-6f-hWG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="GeH-DG-rwh"/>
+                            <constraint firstItem="EGq-Nm-hp0" firstAttribute="top" secondItem="gcE-6f-hWG" secondAttribute="bottom" constant="20" id="XeO-8W-aOG"/>
                             <constraint firstItem="Dtu-Li-DiX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="k4a-Dg-tZ3"/>
                             <constraint firstItem="EGq-Nm-hp0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="vlp-Nd-ntc"/>
                         </constraints>
@@ -143,7 +154,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="990" y="135"/>
+            <point key="canvasLocation" x="989.85507246376824" y="134.59821428571428"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
