--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -90,28 +90,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EIP-U0-wTD">
-                                <rect key="frame" x="20" y="160" width="374" height="34"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oNp-3e-wzu">
-                                <rect key="frame" x="20" y="214" width="374" height="348"/>
+                                <rect key="frame" x="20" y="300" width="374" height="348"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="WaI-Wo-4k8">
+                                <rect key="frame" x="20" y="160" width="374" height="32"/>
+                                <segments>
+                                    <segment title="🙁"/>
+                                    <segment title="😐"/>
+                                    <segment title="🙂"/>
+                                </segments>
+                            </segmentedControl>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EIP-U0-wTD">
+                                <rect key="frame" x="20" y="233" width="374" height="34"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="EIP-U0-wTD" firstAttribute="top" secondItem="V3x-c5-5ai" secondAttribute="top" constant="20" id="0Fz-HO-IgZ"/>
-                            <constraint firstItem="oNp-3e-wzu" firstAttribute="top" secondItem="EIP-U0-wTD" secondAttribute="bottom" constant="20" id="LYu-a4-UsZ"/>
+                            <constraint firstItem="V3x-c5-5ai" firstAttribute="bottom" secondItem="oNp-3e-wzu" secondAttribute="bottom" constant="214" id="RGw-dC-5A8"/>
                             <constraint firstItem="V3x-c5-5ai" firstAttribute="trailing" secondItem="EIP-U0-wTD" secondAttribute="trailing" constant="20" id="VCo-FX-dmd"/>
+                            <constraint firstItem="WaI-Wo-4k8" firstAttribute="leading" secondItem="V3x-c5-5ai" secondAttribute="leading" constant="20" id="XKq-in-QXa"/>
                             <constraint firstItem="oNp-3e-wzu" firstAttribute="leading" secondItem="V3x-c5-5ai" secondAttribute="leading" constant="20" id="XoP-Zl-RiA"/>
                             <constraint firstItem="V3x-c5-5ai" firstAttribute="trailing" secondItem="oNp-3e-wzu" secondAttribute="trailing" constant="20" id="aAX-Hn-VSR"/>
-                            <constraint firstItem="V3x-c5-5ai" firstAttribute="bottom" secondItem="oNp-3e-wzu" secondAttribute="bottom" constant="300" id="j1u-wh-swS"/>
+                            <constraint firstItem="oNp-3e-wzu" firstAttribute="top" secondItem="EIP-U0-wTD" secondAttribute="bottom" constant="33" id="ijJ-9E-uwA"/>
+                            <constraint firstItem="EIP-U0-wTD" firstAttribute="top" secondItem="WaI-Wo-4k8" secondAttribute="bottom" constant="42" id="owE-af-rVv"/>
+                            <constraint firstItem="V3x-c5-5ai" firstAttribute="trailing" secondItem="WaI-Wo-4k8" secondAttribute="trailing" constant="20" id="qY8-qn-UG0"/>
+                            <constraint firstItem="WaI-Wo-4k8" firstAttribute="top" secondItem="V3x-c5-5ai" secondAttribute="top" constant="20" id="s9a-dH-ABa"/>
                             <constraint firstItem="EIP-U0-wTD" firstAttribute="leading" secondItem="V3x-c5-5ai" secondAttribute="leading" constant="20" id="wVC-aA-UQK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="V3x-c5-5ai"/>
@@ -125,6 +136,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="entryTextView" destination="oNp-3e-wzu" id="hjT-uA-yxV"/>
+                        <outlet property="moodConntrol" destination="WaI-Wo-4k8" id="cHD-EM-JwU"/>
                         <outlet property="titleTextField" destination="EIP-U0-wTD" id="Dec-m3-MdO"/>
                     </connections>
                 </viewController>
